<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.9</version>
        <relativePath/> <!-- Lookup parent from repository -->
    </parent>
    <groupId>com.example.embabelsubagenttest</groupId>
    <artifactId>Embabelsubagenttest</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>My first agent</name>
    <description>Generated agent project</description>

    <properties>
        <java.version>25</java.version>
        <embabel-agent.version>0.3.1</embabel-agent.version>
    </properties>

    <dependencies>

        <!-- Main Dependencies -->
        <dependency>
            <groupId>com.embabel.agent</groupId>
            <artifactId>embabel-agent-starter</artifactId>
            <version>${embabel-agent.version}</version>
        </dependency>

        <dependency>
            <groupId>com.embabel.agent</groupId>
            <artifactId>embabel-agent-starter-shell</artifactId>
            <version>${embabel-agent.version}</version>
        </dependency>

        <dependency>
            <groupId>com.embabel.agent</groupId>
            <artifactId>embabel-agent-test</artifactId>
            <version>${embabel-agent.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jspecify</groupId>
            <artifactId>jspecify</artifactId>
            <version>1.0.0</version>
        </dependency>


        <!-- Unit and Integration Testing -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>openai-models</id>
            <activation>
                <property>
                    <name>env.OPENAI_API_KEY</name>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>com.embabel.agent</groupId>
                    <artifactId>embabel-agent-starter-openai</artifactId>
                    <version>${embabel-agent.version}</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>anthropic-models</id>
            <activation>
                <property>
                    <name>env.ANTHROPIC_API_KEY</name>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>com.embabel.agent</groupId>
                    <artifactId>embabel-agent-starter-anthropic</artifactId>
                    <version>${embabel-agent.version}</version>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

    <!-- Uncomment these lines to enable Embabel repositories and use snapshots -->
    <!--    <repositories>-->
    <!--        <repository>-->
    <!--            <id>embabel-releases</id>-->
    <!--            <url>https://repo.embabel.com/artifactory/libs-release</url>-->
    <!--            <snapshots>-->
    <!--                <enabled>false</enabled>-->
    <!--            </snapshots>-->
    <!--        </repository>-->
    <!--        <repository>-->
    <!--            <id>embabel-snapshots</id>-->
    <!--            <url>https://repo.embabel.com/artifactory/libs-snapshot</url>-->
    <!--            <releases>-->
    <!--                <enabled>false</enabled>-->
    <!--            </releases>-->
    <!--            <snapshots>-->
    <!--                <enabled>true</enabled>-->
    <!--            </snapshots>-->
    <!--        </repository>-->
    <!--    </repositories>-->

</project>
